Added support for vaultAPI and 2 inbuilt placeholders for commands